idyllic machine implementation + more

--- a/localisation/english/replace/!_evolved_to_do_R8_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R8_l_english.yml
@@ -236,6 +236,72 @@
 
 # /
 
+# ???
+
+ # Drake saw
+	tec_dragons.100:0 ""
+	tec_dragons.100.desc:0 ""
+	tec_dragons.100.desc.phobe:0 ""
+	tec_dragons.100.desc.phile:0 ""
+	tec_dragons.100.desc.gestalt:0 ""
+	tec_dragons.100.desc.gestalt.empath:0 ""
+	tec_dragons.100.desc.dragon.origin:0 ""
+	tec_dragons.100.desc.dragon.species:0 ""
+
+	tec_dragons.100.a:0 ""
+	tec_dragons.100.a.tooltip:0 ""
+
+ # Drake studied
+
+ # Drake killed
+
+ # Drake captured
+
+ # Drake tracked
+
+ # Drake system located
+
+ # Drake system tracked
+
+ # Reference
+	Astory.101.name:0 "Space Amoebas"
+	Astory.101.desc.phile:1 "The entities encountered by our fleets some time ago are new, wondrous, forms of spaceborne life.\n\nQuickly nicknamed "Space Amoeba" following an analyst's gross misreading of initial sensor output, the creature is in fact larger than the average [Root.Owner.GetAdj] corvette.\n\nWe should leave it be and remotely monitor the creature and its kin from [Root.Owner.Capital.GetName]."
+	Astory.101.desc.phobe:2 "The entities encountered by our fleets some time ago are new, horrifying lifeforms.\n\nQuickly nicknamed "Space Amoeba" following an analyst's gross misreading of initial sensor output, the creature is in fact larger than the average [Root.Owner.GetAdj] corvette.\n\nThere would be little harm in putting the monstrosities out of their misery.\n\nFor science, or some equivalent."
+	Astory.101.desc.milit:2 "The entities encountered by our fleets some time ago are spaceborne forms of life.\n\nQuickly nicknamed "Space Amoeba" following a tactician's gross misreading of initial sensor output, the creature is in fact larger than the average [Root.Owner.GetAdj] corvette.\n\nThe creature displays aggressive behavior towards [Root.Owner.GetAdj] ships but further study might be warranted."
+	Astory.101.desc.pacif:1 "The entities encountered by our fleets some time ago are new, spaceborne lifeforms.\n\nQuickly nicknamed "Space Amoeba" following an analyst's gross misreading of initial sensor output, the creature is in fact larger than the average [Root.Owner.GetAdj] corvette.\n\nDespite its apparent orneriness, further study is warranted - we can remotely monitor the creature and its kin from [Root.Owner.Capital.GetName]."
+	Astory.101.desc.mater:2 "The entities encountered by our fleets some time ago are spaceborne forms of life.\n\nQuickly nicknamed "Space Amoeba" following an analyst's gross misreading of initial sensor output, the creature is in fact larger than the average [Root.Owner.GetAdj] corvette."
+	Astory.101.desc.gesta:1 "The entities encountered by our fleets some time ago are new, spaceborne lifeforms.\n\nWhile significantly larger than a [Root.Owner.GetAdj] Corvette, these "Space Amoeba" herds are minuscule next to our full corpus."
+	Astory.101.desc:1 "The entities encountered by our fleets some time ago are new, spaceborne lifeforms.\n\nQuickly nicknamed "Space Amoeba" following an analyst's gross misreading of initial sensor output, the creature is in fact larger than the average [Root.GetAdj] corvette."
+	Astory.101.a:0 "Issue a special project for remote Space Amoeba study."
+	Astory.101.b:0 "We expect our fleets to make short work of the creature."
+
+	Astory.105.name:0 "Space Amoebas Forever"
+	#project completed
+	Astory.105.desc.phile:1 "The Space Amoebas - the nickname now lovingly popularized on [Root.Capital.GetName] - are solitary animals, when left to their own devices. All but the youngest specimens are accompanied by quasi-independent organisms, dubbed flagella, seemingly spawned by the Amoeba and programmed through liquid, RNA-laced secretions to do the bidding of the host.\n\nInitially assumed to be young Space Amoebas, the flagella do not seem to factor into any reproductive mechanics, each individual flagellum instead operating solely as a disconnected limb for its host Amoeba. These flagella are capable of manipulating and even attacking objects in an impressive yet restricted range around the host, periodically returning to lodge inside the host Amoeba's body for re-programming.\n\nThere are potential military applications to be found in the regenerative properties of the amoeba's thick hide, or in the flagella's graceful patterns of movement."
+	Astory.105.desc.pacif:0 "The Space Amoebas - the nickname became popular after the story of how it came to be found its way back to [Root.Capital.GetName] - are solitary animals, when left to their own devices. All but the youngest specimens are accompanied by quasi-independent organisms, dubbed flagella, seemingly spawned by the Amoeba and programmed through liquid, RNA-laced secretions to do the bidding of the host.\n\nInitially assumed to be young Space Amoebas, the flagella do not seem to factor into any reproductive mechanics, each individual flagellum instead operating solely as a disconnected limb for its host Amoeba. These flagella are capable of manipulating and even attacking objects in an impressive yet restricted range around the host, periodically returning to lodge inside the host Amoeba's body for re-programming."
+	Astory.105.desc:1 "The Space Amoebas - the name has stuck as the pronunciation of the proper xeno-taxonomic denominator is too unwieldy for the average [Root.GetSpeciesName] - are solitary animals, when left to their own devices. All but the youngest specimens are accompanied by quasi-independent flagella, organisms spawned by the Amoeba and programmed through liquid, RNA-laced secretions to do the bidding of the host. These flagella are capable of manipulating and even attacking objects in an impressive yet restricted range around the host, periodically returning to lodge inside the host Amoeba's body for re-programming.\n\nThere are potential military applications to be found in the regenerative properties of the amoeba's thick hide, or in the flagella's graceful patterns of movement."
+	Astory.105.desc.gesta:0 "A Space Amoeba is usually accompanied by a handful of semi-independent flagella used for defense and object manipulation. The Amoeba and its flagella do not share a mind, the former instead using RNA-laced secretions to program the latter for the execution of tasks of middling complexity."
+	Astory.105.a:0 "Fascinating indeed."
+
+	Astory.110.name:0 "Space Amoeba Dissected"
+	#debris studied
+	Astory.110.desc.phobe:0 "The Space Amoebas - now a quasi-derogatory term gleefully popularized by the [Root.GetSpeciesAdj] forces tasked with bringing them down - are much more complex than anticipated. Their hardy exteriors protect a great number of pockets housing smaller "amoebas," creatures that our fleets have observed effectively acting as strike craft when engaging the "mothership amoeba." While superficially similar beyond the obvious differences in size, the "strike amoeba" are much simpler creatures than the Space Amoeba proper. Inside the Space Amoeba, beyond these pockets, lie hundreds of delicate organs doubtlessly all integral to surviving the harsh vacuum of space.\n\nMany of these organs ruptured or were simply incinerated in the process of dispatching the Amoeba, leaving us with a largely incomplete carcass.\n\nHowever, xeno-biologists assigned to the Space Amoeba project believe that the process of acquiring specimens is sound, and have distributed specific targeting instructions among the military fleets involved. With five more Amoebas, killed by surgical strikes to specific parts of their anatomy, a complete carcass can effectively be reconstructed."
+	Astory.110.desc.milit:0 "The Space Amoebas - the nickname eventually adopted as the official target designator by [Root.GetSpeciesAdj] forces - are much more complex than anticipated. Their hardy exteriors protect a great number of pockets housing smaller "amoebas," creatures that our fleets have observed effectively acting as strike craft when engaging the "mothership amoeba." While superficially similar beyond the obvious differences in size, the "strike amoeba" are much less physiologically complex than the Space Amoeba proper. Inside the Space Amoeba, beyond these pockets, lie hundreds of delicate organs doubtlessly all integral to surviving the harsh vacuum of space. Many of these organs ruptured or were simply incinerated in the process of dispatching the Amoeba, leaving us with a largely incomplete carcass.\n\nHowever, xeno-biologists assigned to the Space Amoeba project believe that the process of acquiring specimens is sound, and have distributed specific targeting instructions among the military fleets involved. With five more Amoebas, killed by surgical strikes to specific parts of their anatomy, a complete carcass can effectively be reconstructed."
+	Astory.110.desc:0 "The Space Amoebas - as they defy easy classification according to traditional [Root.Owner.Capital.GetSpeciesAdj] taxonomy, the name has stuck - are much more complex than anticipated. Their hardy exteriors protect a great number of pockets housing smaller "amoebas," creatures that our fleets have observed effectively acting as strike craft when engaging the "mothership amoeba." While superficially similar beyond the obvious differences in size, the "strike amoeba" are much less physiologically complex than the Space Amoeba proper. Inside the Space Amoeba, beyond these pockets, lie hundreds of delicate organs doubtlessly all integral to surviving the harsh vacuum of space. Many of these organs ruptured or were simply incinerated in the process of dispatching the Amoeba, leaving us with a largely incomplete carcass. Xenobiologists assigned to the Space Amoeba project believe this to be enough however, as they have already successfully identified several physiological features and weaknesses unique to the Space Amoebas."
+	Astory.110.desc.gesta:0 "The Space Amoebas are much more complex than anticipated. Their hardy exteriors protect a great number of pockets housing smaller "amoebas," creatures that our fleets have observed effectively acting as strike craft when engaging the "mothership amoeba." While superficially similar beyond the obvious differences in size, the "strike amoeba" are much less physiologically complex than the Space Amoeba proper. Inside the Space Amoeba, beyond these pockets, lie hundreds of delicate organs doubtlessly all integral to surviving the harsh vacuum of space. Many of these organs ruptured or were simply incinerated in the process of dispatching the Amoeba, leaving us with a largely incomplete carcass. Xenobiologists assigned to the Space Amoeba project believe this to be enough however, as they have already successfully identified several physiological features and weaknesses unique to the Space Amoebas."
+	Astory.110.a.phobe:1 "Whatever helps us be rid of them faster."
+	Astory.110.b.milit:0 "Target practice."
+	Astory.110.c:0 "Very well."
+
+	Astory.115.name:0 "Space Amoebas Slaughtered" #kill 5 quest
+	Astory.115.desc.phobe:0 "Several dead Amoebas later, we are able to investigate the Space Amoebas' grotesque relationship with the smaller creatures they house inside their bodies. As far as [Root.GetSpeciesAdj] xeno-biologists can tell, these flagella - named for their whip-like movements - are not proper offspring or even parasites. They are simply spawned from the host once the host reaches maturity, created as tools rather than the result of procreation. Once their task is complete they return to a pocket in the host Amoeba, seemingly to receive new orders. They work as manipulators, blind appendages reaching in the dark. The laughably obvious drawbacks resulting from their inherently delayed reaction time are somewhat offset by the Amoeba's sheer number of circulating flagella, and the individual flagellum's strong set of reflexive responses and ability to dumbly track the host Amoeba.\n\nAt any rate, we are better at killing them now."
+	Astory.115.desc.milit:0 "With several carcasses collected, we are able to investigate the Space Amoebas' curious relationship with the smaller creatures they house inside their bodies. As far as [Root.GetSpeciesAdj] xeno-biologists can tell, these flagella - named for their whip-like movements - are not proper offspring or even parasites. They are simply spawned from the host once the host reaches maturity, created as tools rather than the result of procreation. Where one would expect to find a brain - considering their intricate movement and inter-flagellar interactions - the flagellum instead possess a complex glandular processing center. This center decodes input - orders - in the form of RNA, secreted by the Amoeba and received by the flagellum through subcutaneous receptors. Once their task is complete they return to a pocket in the host Amoeba to receive new orders. This allows them to work as manipulators, hands severed from the body. The obvious drawbacks in this inherently delayed reaction time are somewhat offset by the Amoeba's sheer number of circulating flagella, and the individual flagellum's strong set of reflexive responses and ability to dumbly track the host Amoeba. The Space Amoebas' relative proficiency in deep-space combat is largely due to the consistent deployment of their flagella, something our forces could likely learn a lot from."
+	Astory.115.desc:0 "Following the slaying of the fourth creature, a complete Space Amoeba carcass was reconstructed on the [Root.GetName]'s capital of [Root.Capital.GetName]. We are now beginning to divine some of the creatures' hidden truths, and they are being conveyed to the appropriate departments within [Root.GetSpeciesAdj] administration.\n\nThe perhaps most useful discovery at present relates to the Space Amoebas' cutaneous membranes. They absorb and - through complex glandular processes - metabolize a wide range of cosmic radiation, seemingly drawing some sustenance from the rays."
+	Astory.115.a.phobe:0 "Righteous." # emp mod, +20% dmg vs amoebas
+	Astory.115.b.milit:0 "Then learn we shall." # emp mod, improved strike craft
+	Astory.115.c:0 "This knowledge can be put to good use." # emp mod, +5% energy
+ # /
+# /
 
 
 
