--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -646,6 +646,27 @@ tec_jump_empty:0 "\n\n"
 # CIVIC FEATURES
 # ---------------------------------------------------------------
 # ----- Regular civics
+# ------------------------------------------------- Vanilla QOL
+ # ------------- Idyllic Bloom
+	# Overwrite
+		building_gaiaseeders_1_desc:0 "$building_gaiaseeders_all_desc$\n\nThis is the initial population growth boost phase."
+		building_gaiaseeders_2_desc:0 "$building_gaiaseeders_all_desc$\n\nThis phase shifts towards habitability and population maintenance."
+		building_gaiaseeders_3_desc:0 "$building_gaiaseeders_all_desc$\n\nThis phase emphasizes habitability and population maintenance."
+		building_gaiaseeders_4_desc:0 "$building_gaiaseeders_all_desc$"
+		building_gaiaseeders_4_effect_desc:0 "Terraforms the planet into a §YGaia World§! on completion."
+	# /
+	building_tec_gaiaseeders_gaia:0 "$building_gaiaseeders$ - Utopian Phase"
+	building_tec_gaiaseeders_gaia_desc:0 "The Facilities serve now as a paragon of the achieved dream, the creation of perfect environments, a monument and tribute to this §YGaia World§!."
+	building_tec_gaiaseeders_gaia_effect:0 "This £building£ Building is synchronized with its §YGaia World§!, providing all the benefits of its previous phases permanently"
+
+
+	holding_tec_idyllic_bloom_gaia:0 "$holding_idyllic_bloom$"
+	holding_tec_idyllic_bloom_gaia_desc:0"Hyper-advanced terraforming techniques mastered by the Overlord are housed in this structure. Its world-changing effects improve the planet even more."
+	holding_tec_idyllic_bloom_gaia_effect:0 "This £building£ Building is synchronized with its §YGaia World§!, providing several benefits"
+
+	plant.100.c:0 "Perfection achieved."
+	plant.105.c:0 "Perfection achieved."
+ # /
 
 # ------------------------------------------------- Medievalism
  building_noble_estates_2:0 "Noble Palace"
@@ -1351,6 +1372,7 @@ tec_jump_empty:0 "\n\n"
  tec_has_cloning_assembly_buildings:0 "Has Organic Assembly buildings"
  tec_has_machine_assembly_buildings:0 "Has Machine Assembly buildings"
  tec_has_genetic_assembly_buildings:0 "Has Cytogenesis assembly buildings"
+ tec_has_zombie_assembly_buildings:0 "Has Zombie assembly buildings"
  tec_has_spawning_assembly_buildings:0 "Has Biological assembly buildings"
  tec_has_mixed_assembly_buildings:0 "Has Multipurpose assembly buildings"
  tec_only_one_assembly_building_on_planet:0 "§ROnly one £pop£ §YAssembly§! building per planet. Any other assembly building must be dismantled before this one can be built.\nReimaginator Machine Empires can't build assembly buildings.§!"
