--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -103,6 +103,14 @@
 	concept_tec_cluster_civics: "Cluster Civics"
 	concept_tec_cluster_civic_desc: "Cluster civics are mutually exclusive, replacing your ['concept_tec_prime_drones_icon'] with a different one, usually changing their base production and effects.\n\nThey can be combined with ['concept_tec_directive_civic']!"
 
+	concept_tec_brood_capital_civic: "Brood Civic"
+	concept_tec_brood_capital_civics: "Brood Civics"
+	concept_tec_brood_capital_civic_desc: "TO DO"
+
+	concept_tec_brood_add_civic: "Cerebrate Civic"
+	concept_tec_brood_add_civics: "Cerebrate Civics"
+	concept_tec_brood_add_civic_desc: "TO DO"
+
 	concept_tec_main_cult_civic: "Main Cult Civic"
 	concept_tec_main_cult_civics: "Main Cult Civics"
 	concept_tec_main_cult_civic_desc: "Main cult civics are mutually exclusive, replacing your priests and temples with swapped variants.\n\nThey can be combined with ['concept_tec_secondary_cult_civic']!"
