void dweller fix for machines

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -487,7 +487,7 @@
 
 	TEC_ETHIC_GESTALT_LIVING_STANDARD:0 "$TEC_TAG_BONUS_LIVING_STANDARD$ Native pops belong to the ['concept_tec_living_standard_hive_mind_alias_icon'] Living Standards and do not require £consumer_goods£ §YConsumer Goods§!"
 	#TEC_ETHIC_GESTALT_EDICT:0 "$TEC_TAG_BONUS_EDICT$ Can use ['concept_tec_edict_equal_opportunities'] Edict"
-	# TEC_ETHIC_GESTALT_MECHANIC:0 "$TEC_TAG_BONUS_MECHANIC$ Rulers are §YImmortal§!, and provide gestalt leaders with §YMonthly Experience§! based on its §YLevel§!"
+	TEC_ETHIC_GESTALT_MECHANIC:0 "$TEC_TAG_BONUS_MECHANIC$ Rulers are §YImmortal§!, and provide gestalt leaders with §YMonthly Experience§! based on its §YLevel§!"
 
 
 #phile
