several fixes + councilor initial deployment

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1027,7 +1027,7 @@
 
 	civic_nationalistic_zeal:0 "§R§!Nationalistic Zeal"
 	civic_nationalistic_zeal_desc:0 "['concept_tec_basic_civic']\n\nA strong sense of nationalistic pride permeates all layers of this society."
-	civic_nationalistic_zeal_tooltip:0 "The §YSupremacist§! faction will produce §Y4§! times more additional §Y$tec_loc_unity$§! while at war .\n\n"
+	civic_nationalistic_zeal_tooltip:0 "The §YImperialist§! faction will produce §Y4§! times more additional §Y$tec_loc_unity$§! while at war .\n\n"
 
 	civic_ascensionists:0 "§R§!Ascensionists"
 	civic_ascensionists_desc:0 "['concept_tec_basic_civic']\n\nThe ultimate goal of this empire is to ascend to ever greater levels of fulfillment."
