--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -25,32 +25,32 @@
 		councilor_civic_tec_regular_stratocracy:0 "Master Strategist"
 		councilor_civic_tec_regular_stratocracy_female:0 "$councilor_civic_tec_regular_stratocracy$"
 		councilor_civic_tec_regular_stratocracy_desc:0 "The $TITLE$ is the direct representation of the military order."
-		councilor_civic_tec_regular_stratocracy_custom_modifier_desc:0 "TO DO"
+		councilor_civic_tec_regular_stratocracy_custom_modifier_desc:0 "§Y+$@councilor_civic_tec_regular_stratocracy_bonus$§! $tec_loc_edict_cap_icon$ from £job_soldier£ §YMilitary Jobs§!"
 
 		councilor_civic_tec_regular_irenic_bureaucracy:0 "Embodiment of Order"
 		councilor_civic_tec_regular_irenic_bureaucracy_female:0 "$councilor_civic_tec_regular_irenic_bureaucracy$"
-		councilor_civic_tec_regular_irenic_bureaucracy_desc:0 "The $TITLE$ serves as both head bureaucrat and main representative of the government affairs, guiding its subordintes towards max efficiency."
-		councilor_civic_tec_regular_irenic_bureaucracy_custom_modifier_desc:0 "TO DO"
+		councilor_civic_tec_regular_irenic_bureaucracy_desc:0 "The $TITLE$ serves as both head bureaucrat and main representative of the government affairs, guiding its subordinates towards max efficiency."
+		councilor_civic_tec_regular_irenic_bureaucracy_custom_modifier_desc:0 "Not needed"
 
 		councilor_civic_tec_regular_archivist:0 "Archlibrarian"
 		councilor_civic_tec_regular_archivist_female:0 "$councilor_civic_tec_regular_archivist$"
-		councilor_civic_tec_regular_archivist_desc:0 "Few things are known of the private or public life of the $TITLE$, but tradition indicate its one of the few individuals who know and have acess to each single archived file, each single ordered database."
-		councilor_civic_tec_regular_archivist_custom_modifier_desc:0 "TO DO"
+		councilor_civic_tec_regular_archivist_desc:0 "Few things are known of the private or public life of the $TITLE$, but tradition indicate its one of the few individuals who know and have access to each single archived file, each single ordered database."
+		councilor_civic_tec_regular_archivist_custom_modifier_desc:0 "Not needed"
 
 		councilor_civic_tec_regular_occultist:0 "Keeper of Secrets"
 		councilor_civic_tec_regular_occultist_female:0 "$councilor_civic_tec_regular_occultist$"
 		councilor_civic_tec_regular_occultist_desc:0 "Being part of the most secretive layers of the cult, the $TITLE$ has seen what others can just dream, and knows what others can't even imagine to know."
-		councilor_civic_tec_regular_occultist_custom_modifier_desc:0 "TO DO"
+		councilor_civic_tec_regular_occultist_custom_modifier_desc:0 "§Y+$@councilor_civic_tec_regular_occultist_bonus$§! £unity£ from £job_tec_grand_occultist£ §YOccultist Jobs§!"
 
 		councilor_civic_tec_regular_science_directorate:0 "Senior Science Director"
 		councilor_civic_tec_regular_science_directorate_female:0 "$councilor_civic_tec_regular_science_directorate$"
 		councilor_civic_tec_regular_science_directorate_desc:0 "The $TITLE$ ensures fundamental research is promoted and shared between departments."
-		councilor_civic_tec_regular_science_directorate_custom_modifier_desc:0 "TO DO"
+		councilor_civic_tec_regular_science_directorate_custom_modifier_desc:0 "Not needed"
 
 		councilor_civic_tec_regular_inventinkers:0 "Supreme Tinker"
 		councilor_civic_tec_regular_inventinkers_female:0 "$councilor_civic_tec_regular_inventinkers$"
 		councilor_civic_tec_regular_inventinkers_desc:0 "$TITLE$s are top-of-tier tinkers, chosen by tinkers guilds and the government itself, to oversee the design and creation of new tools and inventions."
-		councilor_civic_tec_regular_inventinkers_custom_modifier_desc:0 "TO DO"
+		councilor_civic_tec_regular_inventinkers_custom_modifier_desc:0 "Not needed"
 
 		councilor_civic_tec_regular_socialguards:0 "Protector of Rights"
 		councilor_civic_tec_regular_socialguards_female:0 "$councilor_civic_tec_regular_socialguards$"
@@ -107,7 +107,7 @@
 		councilor_civic_tec_regular_cult_personality:0 "Identity Advisor"
 		councilor_civic_tec_regular_cult_personality_female:0 "$councilor_civic_tec_regular_cult_personality$"
 		councilor_civic_tec_regular_cult_personality_desc:0 "It is the duty of the $TITLE$ to be a proper advisor and safeguard of the loyalty to the leader."
-		councilor_civic_tec_regular_cult_personality_custom_modifier_desc:0 "TO DO"
+		councilor_civic_tec_regular_cult_personality_custom_modifier_desc:0 "Not needed"
 
 		councilor_civic_tec_regular_caste_system:0 "Caste Orderer"
 		councilor_civic_tec_regular_caste_system_female:0 "$councilor_civic_tec_regular_caste_system$"
