--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -58,6 +58,9 @@
 
 	tec_loc_strategic_resources: "£trigger_tec_rare_resources£ §YStrategic Resources§!"
 
+	tec_loc_edict_cap_icon:0 "£mod_edict_cap_add£"
+	tec_loc_edict_cap:0 "$tec_loc_edict_cap_icon$ §YEdict Funds§!"
+
  # Fake resource locs
 	tec_loc_housing: "£housing£ $PLANET_HOUSING_TITLE$"
 	tec_loc_amenities: "£amenities£ $PLANET_AMENITIES_TITLE$"
