All civics sorted

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -605,9 +605,6 @@ tec_jump_empty:0 "\n\n"
  mod_job_tec_podtender_drone_per_pop:0 "§G+1§! £mod_job_tec_podtender_drone_add£ $job_tec_podtender_drone$ Job per $VALUE$ Pops"
  mod_job_tec_podtender_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_podtender_drone_add£ per $VALUE$ £pop£"
 
-# ------------------------------------------------- Biohives
-# BIOHIVES GO HERE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-
 # ------------------------------------------------- Cyberhives
  job_tec_network_drone:0 "Network Drone"
  job_tec_network_drone_plural:0 "Network Drones"
@@ -641,6 +638,12 @@ tec_jump_empty:0 "\n\n"
  mod_job_tec_iterator_drone_add:0 "$job_tec_iterator_drone$ Jobs"
  mod_job_tec_iterator_drone_per_pop:0 "§G+1§! £mod_job_tec_iterator_drone_add£ $job_tec_iterator_drone$ Job per $VALUE$ Pops"
  mod_job_tec_iterator_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_iterator_drone_add£ per $VALUE$ £pop£"
+
+# ------------------------------------------------- Biohives
+# BIOHIVES GO HERE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+# ------------------------------------------------- Biomechanical hives
+
 
 # ---------------------------------------------------------------
 # CIVIC FEATURES
