--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -136,6 +136,9 @@
 	tec_loc_councilor_plural: "£council£ Councilors"
 	tec_loc_idle_leader: "Idle Leader"
 
+	tec_loc_leader_icon:0 "£tec_leader£"
+	tec_loc_leader:0 "$tec_loc_leader_icon$ Leader"
+
 	tec_loc_councilor_traits: "£council£ Councilor Traits"
 	tec_loc_normal_traits: "£noclass£ Normal Traits"
 
