--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -862,7 +862,7 @@
 	civic_hive_catalytic_processing_desc:0 "['concept_tec_job_alteration_civic']\n\nThe Hive Mind reprocesses excess organic matter into advanced resources suitable for spacebound structures."
 	civic_hive_catalytic_processing_tooltip:0 "Replaces ['concept_tec_job_alloy_drone_plural_icon'] with ['concept_tec_job_catalytic_drone_plural_icon'].\n£building£ §YFood Processing§! buildings increase the output of £job_catalytic_drone£ §Y$job_catalytic_drone_plural$§! by §G5%§! per £society£ §YFood Production Technology§! researched (such as Eco-Simulation), up to a §G20%§!, based on the building upgrade.\n\n§HThe £job_catalytic_drone£ §Y$job_catalytic_drone_plural$§! pproduction bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!"
 
-	civic_machine_catalytic_processing:1 "§P£tec_civic_job£§!Organic Reprocessing"
+	civic_machine_catalytic_processing:1 "§P£tec_civic_job£§!Biological Reprocessing"
 	civic_machine_catalytic_processing_desc:0 "['concept_tec_job_alteration_civic']\n\nThe Machine Intelligence reprocesses redundant organic matter into advanced resources suitable for spacebound structures."
 	civic_machine_catalytic_processing_tooltip:0 "Replaces ['concept_tec_job_fabricator_plural_icon'] with ['concept_tec_job_catalytic_drone_machine_plural_icon'].\n£building£ §YFood Processing§! buildings increase the output of £job_catalytic_drone£ §Y$job_catalytic_drone_plural$§! by §G5%§! per £society£ §YFood Production Technology§! researched (such as Eco-Simulation), up to a §G20%§!, based on the building upgrade.\n\n§HThe £job_catalytic_drone£ §Y$job_catalytic_drone_plural$§! production bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!"
 
@@ -1799,9 +1799,9 @@
 	civic_tec_hive_myoneural_desc:0 "['concept_tec_leader_civic']\n\nManifested as centralized drone communicators across its territory, the semi-autonomous entities created to govern and control extense territories of this gestalt consciousness also dedicate themselves to amplify and improve the transmission of the hive innovative thoughts."
 	civic_tec_hive_myoneural_tooltip:0 "Active employed £governor£ §YGovernors§! have no §Y$tec_loc_unity$§! Upkeep and produce §G4§! §Y$tec_loc_research_resources$§! per level.\n\n£amenities_no_happiness£ $PLANET_AMENITIES_TITLE$ from £job_brain_drone£ $job_brain_drone$: §G+1§!"
 
-	civic_tec_hive_synergetic:0 "§M£tec_civic_leader£§!Synergetic Connectivity"
-	civic_tec_hive_synergetic_desc:0 "['concept_tec_leader_civic']\n\nConnections, ties, relationships ... in the great scheme of things, how the collective interacts with the galaxy is what will decide it's future, and it knows it very well."
-	civic_tec_hive_synergetic_tooltip:0 "Each §YEnvoy§! assigned to espionage networks will provide §G+0.15§! £influence£ §YInfluence§!.\nEach §YEnvoy§! assigned to improve or harm the relations with other empire will provide §G+2%§! §Y$tec_loc_unity$§! production.\n\n"
+	civic_tec_hive_synergetic_connectivity:0 "§M£tec_civic_leader£§!Synergetic Connectivity"
+	civic_tec_hive_synergetic_connectivity_desc:0 "['concept_tec_leader_civic']\n\nConnections, ties, relationships ... in the great scheme of things, how the collective interacts with the galaxy is what will decide it's future, and it knows it very well."
+	civic_tec_hive_synergetic_connectivity_tooltip:0 "Each §YEnvoy§! assigned to espionage networks will provide §G+0.15§! £influence£ §YInfluence§!.\nEach §YEnvoy§! assigned to improve or harm the relations with other empire will provide §G+2%§! §Y$tec_loc_unity$§! production.\n\n"
 
 	civic_tec_hive_percussive:0 "§M£tec_civic_leader£§!Percussive Fleet Ecstatic"
 	civic_tec_hive_percussive_desc:0 "['concept_tec_leader_civic']\n\nLike a neverending whisper, naval drones communicate with eachother constantly generating a pseudo-web of information surrounding each vessel, each ship, each transport... the intensity of this signal can be perceived wherever the fleet goes, like a constant, rythmic sound."
